# M5S13

./: .gitignore  .pre-commit-config.yaml  Makefile  README-PoC.md  README.md  docker-compose.yml  mcp_validation_results.json  pyproject.toml  test_git_server.py  test_podman_server.py  test_redis_server.py  test_script.py  test_task_master_server.py  validate_mcp_servers.py
.github/: labels.yml
.windsurf/: cascade-examples.md  cascade-rules.md  cascade-rules.yaml  github-repo.json  mcp.json
backlog/: README.md  cascade-rule-server.md  mcp-fetch-server.md  mcp-filesystem-server.md  mcp-git-server.md  mcp-http-wrapper-server.md  mcp-podman-server.md  mcp-redis-server.md  mcp-sequential-thinking-server.md  mcp-task-master-server.md  task-master-integration.md
data/: tasks.db
docker/: docker-compose.yml
docs/: foundation.md  mcp-server-integration-spec.md
monitoring/: loki-local-config.yaml  prometheus.yml  promtail.yml
scripts/: deny_local_markdown_test.sh  seed_dgraph.py  seed_kafka.py  seed_minio.py  seed_weaviate.py  test_dgraph_flow.py  validate_mcp.py  verify_github_issue_flow.sh
servers/: README.md  README_cascade_rules_server.md  README_fetch_server.md  README_filesystem_server.md  README_git_server.md  README_http_mcp_server.md  README_podman_server.md  README_redis_server.md  README_sequential_thinking_server.md  README_task_master_integration_server.md  README_task_master_server.md  base_mcp_server.py  cascade_rules_server.py  fetch_server.py  filesystem_server.py  git_server.py  github_mcp.py  http_mcp_server.py  podman_server.py  redis_server.py  (+5 more)
(+55 files in other folders)
