[project]
name = "m5s13"
version = "0.1.0"
description = "ChatGPT HTML export to Markdown converter with YAML frontmatter"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "package-name>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"
